# teac

./: .gitattributes  Cargo.toml
.github/workflows/: rust.yml
docs/: asmt-2.md  tealang.md
src/: asm.rs  ast.rs  common.rs  experimental.rs  ir.rs  main.rs  opt.rs  parser.rs  tealang.pest
src/asm/: aarch64.rs
src/asm/aarch64/: function_generator.rs  phi_lowering.rs
src/asm/common/: stack.rs
src/ast/: decl.rs  display.rs  expr.rs  ops.rs  program.rs  stmt.rs  tree.rs  types.rs
src/common/: graph.rs  pass.rs
src/experimental/: return_infer.rs
src/ir/: error.rs  function.rs  gen.rs  module.rs  printer.rs  stmt.rs  types.rs  value.rs
src/opt/: mem2reg.rs
src/parser/: common.rs  decl.rs  expr.rs  stmt.rs
tests/: tests.rs
tests/big_int_mul/: big_int_mul.tea
tests/type_infer/: type_infer.out  type_infer.tea
tests/type_infer_1/: type_infer_1.out  type_infer_1.tea
tests/type_infer_2/: std.teah  type_infer_2.out  type_infer_2.tea
tests/type_infer_3/: type_infer_3.out  type_infer_3.tea
tests/type_infer_4/: type_infer_4.out  type_infer_4.tea
tests/type_infer_5/: type_infer_5.tea
tests/type_infer_basic/: type_infer_basic.out  type_infer_basic.tea
