[package]
name = "teac"
version = "0.1.0"
edition = "2021"

[features]
default = []
return-type-inference = []
float = []
for-loop = []
struct-method = []
multi-dim-array = []

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.41", features = ["derive"] }
indexmap = "2.7.0"
pest = "2.8.5"
pest_derive = "2.8.5"
regex = "1.11.2"
thiserror = "2.0.12"
